# AI_NEWS_AGGREGATOR

./: .gitignore  README.md  check_env.py  conftest.py  how --stat HEAD  pyproject.toml  test_gmail.py  updatedyoutube.txt
.github/workflows/: daily.yml
app/: config.py  daily_runner.py  diagnose_network.py  diagnose_sources.py
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/profiles/: user_profile.py
app/scrapers/: anthropic.py  latest_videos.json  openai.py  seen_videos.json  youtube.py
app/services/: email.py  process_digest.py  process_email.py
app/utils/: feed_fetch.py
tests/: test_anthropic_scraper.py  test_feed_fetch.py  test_openai_scraper.py  test_youtube_scraper.py
